--- a/public/404.html
+++ b/public/404.html
@@ -17,7 +17,7 @@
 
     <title>404 Page not found | RR的Lost Land</title>
 
-    <link rel="stylesheet" href="/css/meme.min.7d0abfae912845f83ead7e5fb11d043a97f486f42dc286aff194ab3d56cf6cc9.css"/>
+    <link rel="stylesheet" href="/scss/main.scss"/>
 
     
     
